third_party/rust/cxx/v1/crate/tests/ui/unrecognized_receiver.stderr
error: unrecognized receiver type
 --> $DIR/unrecognized_receiver.rs:4:20
  |
4 |         fn f(self: &Unrecognized);
  |                    ^^^^^^^^^^^^^
