third_party/rust/cxx/v1/crate/tests/ui/unrecognized_receiver.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        fn f(self: &Unrecognized);
    }
}

fn main() {}
